src/test/deca/syntax/invalid/homemade/test/test_pars_inv_print_oubli_expr.deca
// Description:
//    tests de programme incorrect syntaxiquement pour le print
//
// Resultats:
//    Ligne 12 : Erreur (oubli (expr))
//    
//
// Historique:
//    cree le 04/01/2023

{
    print;
}
